# Diallo-sup

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
app/: __init__.py  main.py
app/api/: auth_admin.py  deps.py  errors.py  establishments.py  fleet.py  health.py  incidents.py  ingest.py  inventory.py  reports.py  settings.py
app/core/: config.py  crypto.py  db.py  jwt.py  passwords.py  recovery_codes.py  security.py  totp.py
app/models/: __init__.py  etablissement.py  heartbeat.py  incident.py  raw_push.py  report.py  session.py  user.py
app/schemas/: __init__.py  _utc.py  auth.py  auth_mfa.py  establishment.py  fleet.py  heartbeat.py  incidents.py  ingest.py  inventory.py  reports.py  settings.py
app/scripts/: __init__.py  create_admin.py  init_secrets.py  migrate_phase_b.py  seed_fleet.py
app/services/: __init__.py  auth_lockout.py  fleet.py  incidents.py  ingest.py  inventory.py  reports.py  settings.py
docs/: ARCHITECTURE.md  DECISIONS.md  JOURNAL.md  RESILIENCE.md  ROADMAP.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/auth/: AuthProvider.tsx  RequireAuth.tsx  context.ts  useAuth.ts
frontend/src/components/: Breadcrumb.tsx  Layout.tsx  (+7 more)
ops/: com.diallosup.uvicorn.plist
tests/: conftest.py  test_auth_admin.py  test_auth_lockout.py  test_auth_mfa_flow.py  test_create_admin.py  test_daemon_health.py  test_establishments.py  test_etablissements.py  test_fleet_detail.py  test_fleet_endpoint.py  test_fleet_health.py  test_health.py  test_heartbeats.py  test_incidents_overview.py  test_ingest.py  test_ingest_types.py  test_inventory_overview.py  test_launchd_plist.py  test_migrate_phase_b.py  test_recovery_codes.py  test_reports.py  test_reports_overview.py  test_seed_fleet.py  test_settings_overview.py  test_totp.py  test_utc_serialization.py
(+32 files in other folders)
